src/custom/snapshots/hugr_llvm__custom__logic__test__and@llvm14.snap
---
source: src/custom/logic.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {}, {} } @_hl.main.1({ i32, {}, {} } %0, { i32, {}, {} } %1, { i32, {}, {} } %2) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %3 = extractvalue { i32, {}, {} } %0, 0
  %4 = extractvalue { i32, {}, {} } %1, 0
  %5 = extractvalue { i32, {}, {} } %2, 0
  %6 = and i32 %3, %4
  %7 = and i32 %6, %5
  %8 = trunc i32 %7 to i1
  %9 = select i1 %8, { i32, {}, {} } { i32 1, {} poison, {} undef }, { i32, {}, {} } { i32 0, {} undef, {} poison }
  ret { i32, {}, {} } %9
}
