src/custom/snapshots/hugr_llvm__custom__logic__test__or@pre-mem2reg@llvm14.snap
---
source: src/custom/logic.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i32, {}, {} } @_hl.main.1({ i32, {}, {} } %0, { i32, {}, {} } %1, { i32, {}, {} } %2) {
alloca_block:
  %"0" = alloca { i32, {}, {} }, align 8
  %"2_0" = alloca { i32, {}, {} }, align 8
  %"2_1" = alloca { i32, {}, {} }, align 8
  %"2_2" = alloca { i32, {}, {} }, align 8
  %"4_0" = alloca { i32, {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, {}, {} } %0, { i32, {}, {} }* %"2_0", align 4
  store { i32, {}, {} } %1, { i32, {}, {} }* %"2_1", align 4
  store { i32, {}, {} } %2, { i32, {}, {} }* %"2_2", align 4
  %"2_01" = load { i32, {}, {} }, { i32, {}, {} }* %"2_0", align 4
  %"2_12" = load { i32, {}, {} }, { i32, {}, {} }* %"2_1", align 4
  %"2_23" = load { i32, {}, {} }, { i32, {}, {} }* %"2_2", align 4
  %3 = extractvalue { i32, {}, {} } %"2_01", 0
  %4 = extractvalue { i32, {}, {} } %"2_12", 0
  %5 = extractvalue { i32, {}, {} } %"2_23", 0
  %6 = or i32 %3, %4
  %7 = or i32 %6, %5
  %8 = trunc i32 %7 to i1
  %9 = select i1 %8, { i32, {}, {} } { i32 1, {} poison, {} undef }, { i32, {}, {} } { i32 0, {} undef, {} poison }
  store { i32, {}, {} } %9, { i32, {}, {} }* %"4_0", align 4
  %"4_04" = load { i32, {}, {} }, { i32, {}, {} }* %"4_0", align 4
  store { i32, {}, {} } %"4_04", { i32, {}, {} }* %"0", align 4
  %"05" = load { i32, {}, {} }, { i32, {}, {} }* %"0", align 4
  ret { i32, {}, {} } %"05"
}
